# internet_shop_frontend

./: main.py  pyproject.toml
src/data/: data_actions.py  forms.py
src/templates/: _base.html  _navigation.html  cabinet.html  index.html  login.html  product.html  signup.html
